# gfx1993

./: .gitignore  00-triangle.cpp  01-headless.cpp  02-geometry.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Colour.h  CubeGeometry.cpp  CubeGeometry.h  Depthbuffer.cpp  Depthbuffer.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Exceptions.h  Fragment.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  Geometry2.cpp  Geometry2.h  GridGeometry.cpp  GridGeometry.h  LICENSE  Line.cpp  Line.h  Makefile  Message.cpp  Message.h  Plane.cpp  Plane.h  PlyGeometry.cpp  PlyGeometry.h  README.md  RandomTriangleGeometry.cpp  (+18 more)
common/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Exceptions.h  Vertex.h
examples/: 00-triangle.cpp  01-headless.cpp  02-geometry.cpp  03-linestrips.cpp  04-transparency.cpp  05-clipping.cpp  06-textures.cpp  CMakeLists.txt  GlutDemoApp.cpp  GlutDemoApp.h  lenna.ppm
geometry/: CMakeLists.txt  CubeGeometry.cpp  CubeGeometry.h  Geometry.cpp  Geometry.h  Geometry2.cpp  Geometry2.h  GridGeometry.cpp  GridGeometry.h  PlyGeometry.cpp  PlyGeometry.h  Quad.cpp  Quad.h  RandomTriangleGeometry.cpp  RandomTriangleGeometry.h
rendering/: CMakeLists.txt  Clipper.cpp  Clipper.h  ClipperTest.cpp  Depthbuffer.cpp  Depthbuffer.h  Fragment.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  Rasteriser.cpp  Rasteriser.h  Rasterizer.cpp  Rasterizer.h  RenderConfig.cpp  RenderConfig.h  RenderDebugInfo.h  RenderPrimitive.cpp  RenderPrimitive.h  Shader.cpp  Shader.h  ShadingGeometry.cpp  ShadingGeometry.h  Texture.cpp  Texture.h  Viewport.cpp  Viewport.h
resources/: cbloom_pipeline.txt  links.txt
srenderer/srenderer/: srenderer.1
srenderer/srenderer.xcodeproj/: project.pbxproj
